# Notes

./: .gitignore
C/: basic.txt
Docker&K8s/docker/: docker+flannel跨主机通信.txt  docker-machine.txt  docker-multi-stage-build.txt  docker-swarm-compose-example.yml  docker-swarm.txt  dockerfile-basic-cmd.txt  dockerfile-best-practice.txt  gui&monitoring.txt
Docker&K8s/k8s/: k8s_basic.txt
Docker&K8s/k8s/deployment/: deployment.txt  (+1 more)
Elixir/: Immutability.ex  anonymous_func.ex  binaries.ex  collections.ex  dates&times.ex  iex.ex  list.ex  modules&named_functions.ex  pattern-maching.ex  regex.ex  with.ex
Go/: 数据库操作.txt
Go/beego/: beego.txt
Go/functional/: main.go
Go/goroutine/: goroutine.go  goroutine.txt
Go/http/: client.go
Go/testing/: non-repeating-string-test.go  testing.txt
Go/架构模式/: 架构模式.txt
Go/算法題/: 1.non-repeating-string.go
HTML&CSS/css/: css.txt
HTML&CSS/html/: html.txt
HTML&CSS/less/: less.txt
JS/Ajax/: Ajax.txt
JS/ES6/: Array.js  Class-es5.js  Class.js  DeepClone.js  ES6.txt  Function.js  Generator.js  Set&Map.js  String.js
JS/JS/: js.txt
JS/Node/: Node.txt
JS/React/: React.txt  Redux.txt
JS/Vue/: Vue.txt  defineProperty.html  direvtive.html  reactivity.html
JS/jQuery/: jQuery.txt  jQuery原理.txt
JS/webpack/: webpack.txt
JS/小程序/: 小程序.txt
JS/架构/: links.txt
Network/3 路由/: 1. 路由.txt
Nginx/: basic.txt  cache.txt  fastcgi.txt  gRPC.txt  geoip.txt  https.txt  lb.txt  lua.txt  proxy.txt  rewrite.txt  secure_link.txt  static_resource.txt  uwsgi.txt  virtual_server.txt  websocket.txt  安全问题.txt  性能优化.txt
Python/: basic.py  books.txt  data-struct.py  file.py  ipython.py  iterator.py  parse_data.py  string.py
Python/class_object/: class_object.py
Python/decorator/: decorator_basic.py  decorator_configurable_property.py  decorator_in_class.py  decorator_with_params.py
Python/thread_process/: process_basic.py  thread_basic.py  thread_communication.py  thread_event_notification.py  thread_pool_and_local_data.py
Responsive/: flex.txt  flexible.html  media.txt  pixel.txt  手动实现grid-system.html
Rust/: 常用库
Rust/Rust第一课/02. 基础/04. SQL查询工具/queryer/queryer-py/: Cargo.toml
Rust/basic/: README.txt
Rust/cxyjt/Rust Wasm+go开发k8s管理系统/k8s/: Cargo.toml  index.html
Rust/cxyjt/Rust Wasm+go开发k8s管理系统/k8s/src/: main.rs
Rust/cxyjt/Rust Wasm+go开发k8s管理系统/k8s/src/apis/: mod.rs  test.rs
Rust/cxyjt/Rust Wasm+go开发k8s管理系统/k8s/src/components/: mod.rs  test.rs
Rust/cxyjt/Rust Wasm+go开发k8s管理系统/k8s/src/helper/: js.rs  mod.rs  req.rs
Rust/cxyjt/actix-web/demo/basic/: Cargo.toml
Rust/cxyjt/actix-web/demo/basic/src/: main.rs
Rust/cxyjt/actix-web/demo/basic/src/lib/: auth.rs  header.rs  mod.rs  models.rs  myrequest.rs  mysql.rs  test.rs
Rust/cxyjt/wasm/demo/mywasm/: Cargo.toml  package.json  test.js
Rust/cxyjt/wasm/demo/mywasm/src/: main.rs
Rust/cxyjt/wasm/demo/mywasm/src/components/: app.rs  prodlist.rs
Rust/cxyjt/wasm/demo/mywasm/src/elements/: elselect.rs  mod.rs
Rust/cxyjt/wasm/demo/mywasm/src/utils/: mod.rs  win.rs
Rust/cxyjt/wasm/demo/wasm-echart/: .gitignore  Cargo.toml  docker-compose.yaml  index.html
Rust/cxyjt/wasm/demo/wasm-echart/frontend/: Cargo.toml  Dockerfile  index.html  test.json
Rust/cxyjt/wasm/demo/wasm-echart/frontend/src/: main.rs
Rust/cxyjt/wasm/demo/wasm-echart/frontend/src/echarts/: opt.rs
Rust/cxyjt/wasm/demo/wasm-echart/frontend/src/helper/: data.rs  mod.rs
Rust/cxyjt/wasm/demo/wasm-echart/mysql/init/: data.sql
Rust/cxyjt/wasm/demo/wasm-echart/restapi/: Dockerfile  go.mod  go.sum  main.go
Rust/cxyjt/wasm/demo/wasm-echart/restapi/pkg/config/: DBConfig.go
Rust/cxyjt/wasm/demo/wasm-echart/restapi/pkg/controllers/: dayk.go
Rust/cxyjt/wasm/demo/wasm-echart/restapi/pkg/models/: DayK.go
Rust/cxyjt/wasm/demo/wasm-echart/src/: main.rs
Rust/cxyjt/wasm/demo/wasm-echart/src/echarts/: api.rs  mod.rs  opt.rs
Rust/cxyjt/wasm/demo/wasm-echart/src/helper/: js.rs  mod.rs  web.rs
Rust/cxyjt/wasm/demo/wasmpic/: Cargo.toml  Trunk.toml  index.html
Rust/cxyjt/wasm/demo/wasmpic/src/: funcs.rs  main.rs
Rust/cxyjt/wasm/demo/wasmpic/src/helper/: mod.rs  web.rs
Rust/cxyjt/舆情分析/demo/poa/: Cargo.toml
Rust/cxyjt/舆情分析/demo/poa/src/: main.rs
Rust/cxyjt/舆情分析/demo/poa/src/fetcher/: jsext.rs  mod.rs  model.rs  xhr.rs
Rust/cxyjt/量化&数据分析/demo/4. 多股票数据/: Cargo.toml
Rust/cxyjt/量化&数据分析/demo/4. 多股票数据/src/: helper.rs  main.rs
Rust/cxyjt/量化&数据分析/demo/6. 根据条件过滤数据/: Cargo.toml
Rust/cxyjt/量化&数据分析/demo/6. 根据条件过滤数据/src/: main.rs
Rust/cxyjt/量化&数据分析/demo/pro/: Cargo.toml  docker-compose.yaml  test2.csv
Rust/cxyjt/量化&数据分析/demo/pro/mysql/init/: data.sql
Rust/cxyjt/量化&数据分析/demo/pro/src/: dbhelper.rs  helper.rs  main.rs
dev-tool/tmux/: .tmux.conf  .tmux.mac.conf  script_project_configuration  tmux-basic.txt  tmux_conf_for_setup.conf  tmuxinator.yaml
flutter/: flutter其他.txt  flutter常用第三方插件.txt
flutter/1 基本/: 1.基本.txt
flutter/10 应用信息/: 1.应用信息.txt
flutter/11 国际化/: 1.国际化.txt
flutter/12 测试/: 1.测试.txt
flutter/13 打包发布/: 1.编译模式.txt  2.打包发布.txt
flutter/14 混合开发/: 混合开发.txt
flutter/2 dart/: 2.dart.txt
flutter/3 Widget/: 1.生命周期.txt  2.1 form demo.dart  2.基础widget.txt  3.布局Widget.txt  4.1 SliverGrid+SliverPadding+SliverSafeArea demo.dart  4.2 SliverAppBar+SliverGrid+SliverFixedExtentList demo.dart  4.3 ScrollController demo.dart  4.4 NotificationListener.dart  4.滚动Widget.txt  5.渲染原理.txt
flutter/4 状态管理/: 1.状态管理.txt
flutter/5 事件监听/: 1.事件监听.txt
flutter/6 路由导航/: 1.路由导航.txt
flutter/7 animation/: 1.从小放大的动画.dart  2.AnimatedWidget.dart  3.AnimatedBuilder.dart  4.Hero动画实现.dart  5.实现径向hero动画.dart  6.心跳动画.dart  7.交织动画.dart  8.Hero图片展示.dart  animation.txt
flutter/8 主题风格/: 1.主题风格.txt
flutter/9 屏幕适配/: 1.屏幕适配.txt
flutter/demo/: ExpansionTile_可展开列表.dart  future_builder.dart  phonto_app.dart  shared_preferences.dart  上拉加载更多.dart  下拉刷新.dart
ios/: unread
ios/swift/: swift.txt
linux/Linux操作系统/: Linux操作系统.txt
linux/shell/: shell.txt
network/: 1.基本概念.txt  2.MAC地址&IP地址.txt  4.网络分层.txt
sql/mysql/: mysql.txt
sql/redis/: redis.txt
vim/: 1. 基本概念和基础命令.txt  2. 更多常用命令.txt  3. 初步定制  notes.txt
数据结构与算法/复杂度/: 复杂度.md
(+4169 files in other folders)
