[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
qstring = "0.7.2"
validator = { version = "0.16", features = ["derive"] }
regex = "1.7.0"
futures = "0.3"
# 第二章加入如下依赖
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls","mysql","chrono" ] }
chrono = "0.4.22"
anyhow = "1.0.66"
once_cell = "1.16.0" 