[package]
name = "wasmpic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
js-sys="0.3.60"
image="0.24"
base64 = "0.13.1"
[dependencies.web-sys]
version = "0.3.60"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'console',
  'HtmlButtonElement',
  'HtmlInputElement',
  'FileList',
  'File',
   'FileReader'
]