[package]
name = "wasmpic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.74"
wasm-bindgen-futures = "0.4"
js-sys="0.3"
image="0.24"
base64 = "0.20.0"
chrono = "0.4.23"
polars-core = "0.25.1"
polars-lazy = "0.25.1"
polars-io = { version = "0.25.1" }
getrandom = { version = "*", features = ["js"] }
gloo-net = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'console',
  'HtmlButtonElement',
  'HtmlInputElement',
  'FileList',
  'File',
   'FileReader'
]